<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_back_create"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@color/ActionBar"
            android:foregroundGravity="top"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/txt_back_create"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/BackButton"
                android:textSize="40sp"
                android:clickable="true"
                android:text="@string/back"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <ImageView
                android:id="@+id/img_gather_create"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:cropToPadding="false"
                android:src="@drawable/gatheraction"
                android:paddingLeft="-15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_eventpicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/layout_back_create"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="30dp" >

            <ImageView
                android:id="@+id/img_eventpicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="loadPictureFromGallery"
                android:layout_gravity="center_horizontal"
                android:background="@color/PictureBackground"
                android:src="@drawable/add2"
                android:contentDescription="@string/AddPicture"
                android:padding="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/layout_eventpicture"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <EditText
                android:id="@+id/txt_create_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/title"
                android:background="@drawable/rounded_blue"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="@color/ActionBar"
                android:textColor="@color/FontWhite"
                android:paddingEnd="0dp"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/txt_create_loc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/location"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_blue"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="@color/ActionBar"
                android:textColor="@color/FontWhite"
                android:paddingEnd="0dp"
                android:autoText="false"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/txt_create_desc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/Description"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_blue"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="@color/ActionBar"
                android:textColor="@color/FontWhite"
                android:paddingEnd="0dp"
                android:inputType="textMultiLine|textCapSentences" />

            <EditText
                android:id="@+id/txt_create_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/date"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_blue"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="@color/ActionBar"
                android:textColor="@color/FontWhite"
                android:paddingEnd="0dp"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_createbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/layout_create"
            android:paddingBottom="50dp" >

            <Button
                android:id="@+id/btn_create"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/create"
                android:onClick="createEvent"
                android:layout_marginTop="30dp"
                android:background="@color/PictureBackground"
                android:textSize="15sp"
                android:textColor="@color/FontWhite"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

