<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_Logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gather"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:scaleType="fitCenter" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/layout_logo"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" >

            <EditText
                android:id="@+id/et_Username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username"
                android:background="@drawable/rounded_top"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="#979797"
                android:textColor="#000000"
                android:paddingEnd="0dp" />

            <EditText
                android:id="@+id/et_Password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/rounded_bottom"
                android:paddingStart="15dp"
                android:textSize="15sp"
                android:textColorHint="#979797"
                android:textColor="#000000"
                android:layout_marginTop="1dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_signin"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:paddingTop="35dp" >

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="@string/login"
                android:onClick="login"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:background="#8cffffff"
                android:allowUndo="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:onClick="register"
            android:layout_below="@+id/layout_login"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="25dp"
            android:paddingBottom="50dp" >

            <TextView
                android:id="@+id/txt_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:onClick="register"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:shadowColor="#000000"
                android:textColor="#ffffff" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>